Minor changes made

--- a/gallery.html
+++ b/gallery.html
@@ -3,11 +3,10 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	
-<!-- Mirrored from achtungthemes.com/borano/gallery-grid-fullwidth.html by HTTrack Website Copier/3.x [XR&CO'2013], Sun, 27 Nov 2016 04:46:49 GMT -->
+
 <head>
 		<meta charset="utf-8">
-		<title>Borano - Photography / Portfolio Template</title>
+		<title>Pixelled - Photography website</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="shortcut icon" href="img/favicon.png">
@@ -38,97 +37,22 @@
 				<nav>
 					<ul class="main-menu">
 						<li>
-							<a href="index-2.html">home</a>
-							<ul>
-								<li><a href="index-thumbnails.html">thumbnails</a></li>
-								<li><a href="index-slideshow.html">slideshow</a></li>
-								<li><a href="index-slider.html">slider</a></li>
-								<li><a href="index-horizontal.html">horizontal</a></li>
-								<li><a href="index-horizontal-centered.html">horizontal centered</a></li>
-								<li><a href="index-horizontal-video.html">horizontal video</a></li>
-								<li><a href="index-fullscreen-lightbox.html">fullscreen lightbox</a></li>
-								<li><a href="index-kenburns.html">kenburns</a></li>
-								<li><a href="index-video.html">video</a></li>
-								<li><a href="index-image.html">image</a></li>
-								<li>
-									<a href="landing1.html">landing</a>
-									<ul>
-										<li><a href="landing1.html">landing 1</a></li>
-										<li><a href="landing2.html">landing 2</a></li>
-										<li><a href="landing3.html">landing 3</a></li>
-										<li><a href="landing-video.html">landing video</a></li>
-									</ul>
-								</li>
-								<li><a href="index-gallery.html">gallery</a></li>
-								<li><a href="index-portfolio.html">portfolio</a></li>
-								<li><a href="index-video-portfolio.html">video portfolio</a></li>
-							</ul>
+							<a href="index.html">home</a>
 						</li>
 						<li>
-							<a href="portfolio-3-cols.html">portfolio</a>
-							<ul>
-								<li><a href="portfolio-2-cols.html">2 columns</a></li>
-								<li><a href="portfolio-3-cols.html">3 columns</a></li>
-								<li><a href="portfolio-4-cols.html">4 columns</a></li>
-								<li><a href="portfolio-fullwidth.html">fullwidth</a></li>
-								<li><a href="portfolio-grid.html">classic grid</a></li>
-								<li><a href="portfolio-portrait.html">portrait</a></li>
-								<li><a href="portfolio-wide.html">wide</a></li>
-								<li><a href="portfolio-lightbox.html">lightbox</a></li>
-								<li><a href="portfolio-filter.html">filter</a></li>
-								<li>
-									<a href="portfolio-single1.html">portfolio single</a>
-									<ul>
-										<li><a href="portfolio-single1.html">style 1</a></li>
-										<li><a href="portfolio-single2.html">style 2</a></li>
-										<li><a href="portfolio-single3.html">style 3</a></li>
-										<li><a href="portfolio-single4.html">style 4</a></li>
-										<li><a href="portfolio-single5.html">style 5</a></li>
-										<li><a href="portfolio-single6.html">style 6</a></li>
-									</ul>
-								</li>
-							</ul>
+							<a href="portfolio.html">portfolio</a>
 						</li>
 						<li>
-							<a href="gallery-justified.html">gallery</a>
-							<ul>
-								<li><a href="gallery-justified.html">justified</a></li>
-								<li><a href="gallery-justified-fullwidth.html">justified fullwidth</a></li>
-								<li><a href="gallery-albums.html">albums</a></li>
-								<li><a href="gallery-albums-fullwidth.html">albums fullwidth</a></li>
-								<li><a href="gallery-masonry.html">masonry</a></li>
-								<li><a href="gallery-masonry-fullwidth.html">masonry fullwidth</a></li>
-								<li><a href="gallery-grid.html">grid</a></li>
-								<li><a href="gallery-grid-fullwidth.html">grid fullwidth</a></li>
-								<li><a href="index-horizontal.html">horizontal</a></li>
-								<li><a href="index-horizontal-centered.html">horizontal centered</a></li>
-								<li><a href="index-horizontal-video.html">horizontal video</a></li>
-								<li><a href="index-fullscreen-lightbox.html">fullscreen lightbox</a></li>
-							</ul>
+							<a href="gallery.html">gallery</a>
 						</li>
 						<li>
-							<a href="about-us.html">about</a>
-							<ul>
-								<li><a href="about-us.html">about us</a></li>
-								<li><a href="about-me.html">about me</a></li>
-								<li><a href="about-minimal.html">about minimal</a></li>
-							</ul>
+							<a href="about-me.html">about</a>
 						</li>
 						<li>
-							<a href="blog-boxed.html">blog</a>
-							<ul>
-								<li><a href="blog-fullwidth.html">blog fullwidth</a></li>
-								<li><a href="blog-boxed.html">blog boxed</a></li>
-								<li><a href="blog-post.html">blog post</a></li>
-							</ul>
+							<a href="blog.html">blog</a>
 						</li>
 						<li>
-							<a href="contact-us.html">contact</a>
-							<ul>
-								<li><a href="contact-us.html">contact us</a></li>
-								<li><a href="contact-me.html">contact me</a></li>
-								<li><a href="contact-minimal.html">contact minimal</a></li>
-							</ul>
+							<a href="contact.html">contact</a>
 						</li>
 					</ul>
 				</nav>
@@ -177,26 +101,25 @@
 					</div>
 
 				</div>
-			</div>		
+			</div>
 			<!-- /GALLERY -->
-		
+
 			<!-- FOOTER -->
 			<footer id="footer">
-				
+
 				<!-- FOOTER LINKS -->
 				<div class="footer-links">
-					&copy; 2016. By AchtungThemes. |
+					&copy; 2016. By Monami. |
 					<a href="#">Facebook</a> |
-					<a href="#">Instagram</a> | 
-					<a href="#">500px</a>
+					<a href="#">Instagram</a> |
 				</div>
 
 			</footer>
 			<!-- /FOOTER -->
 
-		</div>	
+		</div>
 		<!-- /MAIN-WRAPPER -->
-		
+
 		<!-- js -->
 		<script src="js/lib/jquery.min.js"></script>
 		<script src="js/lib/scripts.js"></script>
@@ -205,5 +128,4 @@
 
 	</body>
 
-<!-- Mirrored from achtungthemes.com/borano/gallery-grid-fullwidth.html by HTTrack Website Copier/3.x [XR&CO'2013], Sun, 27 Nov 2016 04:46:49 GMT -->
 </html>
