--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 					&copy; 2016. By Monami. |
 					<a href="#">Facebook</a> |
 					<a href="#">Instagram</a> |
-					<a href="#">500px</a>
+					<!--a href="#">500px</a-->
 				</div>
 
 				<!-- SLIDE CAPTION -->
